log-output/manifests/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: log-output-app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: log-output-app
#   template:
#     metadata:
#       labels:
#         app: log-output-app
#     spec:
#       containers:
#         - name: log-writer
#           image: aritrabb/log-writer:latest
#           volumeMounts:
#             - name: shared-logs
#               mountPath: /logs
#         - name: log-reader
#           image: aritrabb/log-reader:latest
#           ports:
#             - containerPort: 3000
#           volumeMounts:
#             - name: shared-logs
#               mountPath: /logs
#       volumes:
#         - name: shared-logs
#           emptyDir: {}

apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      containers:
        - name: log-writer
          image: aritrabb/log-writer:latest
          volumeMounts:
            - name: shared-image
              mountPath: /logs
        - name: log-reader
          image: aritrabb/log-reader:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-image
              mountPath: /logs
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: log-ping-claim
